<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_age_app_calculator"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/select_date"
        android:textColor="@color/black"
        app:backgroundTint="@color/yellow" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Find_your_age_in"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnMins"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/MINUTES"
            android:textColor="@color/black"
            app:backgroundTint="@color/yellow" />

        <Button
            android:id="@+id/btnHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="15dp"
            android:text="@string/HOURS"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/yellow" />


        <Button
            android:id="@+id/btnWeeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="15dp"
            android:text="@string/WEEKS"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            app:backgroundTint="@color/yellow" />

    </LinearLayout>

    <TextView
        android:id="@+id/TVDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/selected_date"
        android:textStyle="normal"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/TVAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:textColor="@color/yellow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/calculated_age"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/white"
        />

    <!--    <Button-->
<!--        android:id="@+id/buttonHours"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:text="@string/HOURS" />-->

<!--    <Button-->
<!--        android:id="@+id/buttonMinutes"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/MINUTES" />-->

<!--    <Button-->
<!--        android:id="@+id/buttonWeeks"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/WEEKS" />-->


</LinearLayout>